
[package]
name = "stylus-toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LimeChain/stylus-toolkit"
keywords = ["arbitrum", "stylus", "wasm", "ethereum", "toolkit"]
description = "Arbitrum Stylus toolkit providing primitive building blocks for smart contract development."

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.1"
wee_alloc = "0.4.5"
ed25519-compact = { version = "2.0.4", features = [
    "disable-signatures",
    "opt-size",
] }

[features]
export-abi = ["stylus-sdk/export-abi"]
