
[package]
name = "stylus-toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LimeChain/stylus-toolkit"
keywords = ["arbitrum", "stylus", "wasm", "ethereum", "toolkit"]
description = "Arbitrum Stylus toolkit providing primitive building blocks for smart contract development."

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.5.1"
wee_alloc = "0.4.5"
ed25519-compact = { version = "2.0.4", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]

[build]
target = "wasm32-unknown-unknown"

[target.wasm32-unknown-unknown]
rustflags = [
    "-C", "link-arg=-zstack-size=8192", # shrink the heap
]

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds