
[package]
name = "stylus-toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LimeChain/stylus-toolkit"
keywords = ["arbitrum", "stylus", "wasm", "ethereum", "toolkit"]
description = "Arbitrum Stylus toolkit providing primitive building blocks for smart contract development."

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.5.1"
mini-alloc = "0.4.2"
ed25519-compact = { version = "2.0.4", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]